--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div>Hello world!!</div>
+  <div>Live Reload? <3</div>
   <script src="/frontClient.js"></script>
 </body>
 </html>
